--- a/Projects/CsProjArrange/CsProjArrange/CsProjArrange.csproj
+++ b/Projects/CsProjArrange/CsProjArrange/CsProjArrange.csproj
@@ -63,6 +63,7 @@
     <Compile Include="CsProjArrangeConsole.cs" />
     <Compile Include="CsProjArrangeStrategy.cs" />
     <Compile Include="CustomSortingProcessor.cs" />
+    <Compile Include="InputDataModificator.cs" />
     <Compile Include="Mono.Options\Options.cs" />
     <Compile Include="NodeNameComparer.cs" />
     <Compile Include="Program.cs" />
