--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,4 @@ _ReSharper*/
 [Tt]est[Rr]esult*
 /Projects/CsProjArrange/.vs/CsProjArrange/v15/Server/sqlite3
 /Test
+/Projects/CsProjArrange/.vs/CsProjArrange/v16/Server/sqlite3
